# GQQFM

./: .gitignore  CLAUDE.md  config.py  deploy.sh  finnhub.key  pyproject.toml  requirements.txt  start_streamlit.bat  start_streamlit.ps1  temp.txt
.claude/: settings.local.json
backtesting/: __init__.py  replay.py
data/: cache_polygon.py  models.py  provider_base.py  provider_polygon.py  provider_yfinance.py  risk_free_rate.py  tracked_combos.json
engine/: backend.py  black_scholes.py  combinator.py  pnl.py
events/: __init__.py  calendar.py  finnhub_calendar.py  fomc_calendar.py  models.py
scoring/: filters.py  metrics.py  probability.py  regime.py  scorer.py
screener/: __init__.py  behavior.py  event_filter.py  iv_rank.py  iv_rank_polygon.py  models.py  options_analyzer.py  scorer.py  screener.py  stock_filter.py  universe.py
scripts/: check_cache.py  diag_pnl_gap.py  validate_ranking.py
templates/: __init__.py  base.py  calendar_strangle.py  call_diagonal_backspread.py  call_ratio_diagonal.py  double_calendar.py  reverse_iron_condor.py
tests/: test_behavior.py  test_black_scholes.py  test_combinator.py  test_combinator_events.py  test_event_calendar.py  test_iv_rank.py  test_iv_rank_polygon.py  test_pnl.py  test_pricer_properties.py  test_regime.py  test_scan_vs_direct.py  test_scorer_events.py  test_scoring.py  test_scoring_multi.py  test_screener_filters.py  test_screener_integration.py  test_screener_scoring.py  test_select_event_pairs.py
tracker/: Dockerfile  api.py  collector.py  docker-compose.yml  main.py  requirements.txt
ui/: app.py  (+6 more)
(+61 files in other folders)
