[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "options-scanner"
version = "0.1.0"
description = "Options P&L Profile Scanner — GPU-accelerated 4-leg option combination scanner"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: tests requiring a CUDA-capable GPU (deselect with -m 'not gpu')",
]
